Fix: Organise divs to fill empty space on tablets in courses section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,17 +118,24 @@ main section {
 
 hr {
     width: 90%;
-    margin: auto;
+    margin: 10px auto;
 }
 
 .invite a {
     text-align: center;
 }
 
+.invite p {
+    width: 75%;
+}
+
 .invitation-images {
     width:75%;
     border-radius: 2%;
+}
 
+.hr-75 {
+    width: 75%;
 }
 
 .paragraph-images{
@@ -137,10 +144,14 @@ hr {
 }
 
 /*Courses Page */
-.course-boxes {
+.structure, .course-boxes {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.structure li {
+    margin-bottom: 5px;
 }
 
 #courses ul {
@@ -332,6 +343,16 @@ footer i {
         width: 80%;
         padding: 15px;
         border-radius: 10%;
+    }
+
+    /* Courses Page */
+    #courses > div {
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    #courses ul {
+        width: -webkit-fill-available;
     }
 
 }
